change to thymeleaf for email template