@@ -2,6 +2,7 @@ package dean.project.Dride.config.security.filters;
 
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import dean.project.Dride.config.security.users.AuthenticatedUser;
 import dean.project.Dride.config.security.util.JwtUtil;
 import dean.project.Dride.data.dto.response.api_response.GlobalApiResponse;
 import jakarta.servlet.FilterChain;
@@ -23,10 +24,7 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
-import static dean.project.Dride.utilities.AdminUrls.ADMIN_BASE_URL;
-import static dean.project.Dride.utilities.Constants.AUTHENTICATION_FAILED;
-import static dean.project.Dride.utilities.Constants.LOGIN_URL;
-import static dean.project.Dride.utilities.SecurityUrls.*;
+import static dean.project.Dride.utilities.Constants.*;
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 
 @Slf4j
@@ -68,15 +66,15 @@ public class DrideAuthorizationFilter extends OncePerRequestFilter {
     private static void savedToContext(UserDetails userDetails) {
         UsernamePasswordAuthenticationToken authenticationToken =
                 new UsernamePasswordAuthenticationToken(
-                        userDetails.getUsername(), null, userDetails.getAuthorities());
+                        userDetails, null, userDetails.getAuthorities());
         //Note: After authentication, do not save the  user password in security context holder.
         SecurityContextHolder.getContext().setAuthentication(authenticationToken);
     }
 
     private boolean grantFreeAccessTo(String servletPath) {
-        List<String> allowedPaths = Arrays.asList(
-                LOGIN_URL, DRIVER_REGISTER, PASSENGER_REGISTER,
-                ADMIN_BASE_URL, VERIFY_USER, ADMIN_DETAILS);
+        List<String> allowedPaths = List.of(LOGIN_URL, DRIVER_REGISTER, PASSENGER_REGISTER,
+                ADMIN_BASE_URL, VERIFY_USER, ADMIN_DETAILS,
+                "/swagger-ui.html", "/swagger-ui/**", "/v3/api-docs", "/v3/api-docs/**");
         return allowedPaths.contains(servletPath);
     }
 
